Fix nav icon alignment

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -132,6 +132,7 @@
 
       .logout-icon {
         margin-top: 0.1rem;
+        margin-right: 0.5rem;
       }
 
       .courses-icon,
